--- a/.github/workflows/Build_X86_64[个人双开版].yml
+++ b/.github/workflows/Build_X86_64[个人双开版].yml
@@ -106,20 +106,19 @@ jobs:
     - name: Check server configuration
       run: |
         echo "警告⚠"
-        echo "若分配的服务器性能不足，务必及时取消，重新运行！"
-        echo "已知编译成功CPU型号：8370C,8272CL"
-        echo "已知性能不足CPU型号：8171M"
-        echo -e "-------------- ------------CPU信息------------------------------------------\n"
+        echo "分配的服务器性能有限，若选择的插件过多，务必注意CPU性能！"
+        echo -e "已知CPU型号(降序): 7763，8370C，8272CL，8171M，E5-2673 \n"
+        echo -e "-------------- ------------CPU信息------------------------------------------"
         echo "CPU物理数量:$(cat /proc/cpuinfo| grep "physical id"| sort| uniq| wc -l)"
+        echo "CPU线程数量: $(nproc)"
         echo -e "CPU核心及版本信息：$(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
         echo "-------------------------------内存信息-------------------------------------------"
         echo "已安装内存详细信息："
-        sudo lshw -short -C memory | grep GiB
-        echo -e "\n"
+        echo -e "$(sudo lshw -short -C memory | grep GiB) \n"
         echo "-----------------------------硬盘信息---------------------------------------------"
-        echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l) \n"
+        echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l)"
         echo "硬盘详情："
-        echo " 系统空间       类型   总数  已用  可用  使用率"
+        echo "系统空间        类型   总数  已用  可用  使用率"
         df -Th
 
     - name: Initialization environment
@@ -234,7 +233,7 @@ jobs:
     - name: Output compilation information
       run: |
         cd openwrt
-        echo " 系统空间       类型  总数  已用  可用  使用率"
+        echo "系统空间        类型  总数  已用  可用  使用率"
         df -hT $PWD
         echo
         echo "=========================================="
@@ -285,7 +284,7 @@ jobs:
         echo "=========================================="
         echo "----------------空间使用-------------------"
         echo "=========================================="
-        echo " 系统空间      类型   总数  已用  可用 使用率"
+        echo "系统空间       类型   总数  已用  可用 使用率"
         df -hT
         echo "=========================================="
         du -h --max-depth=1 openwrt/ --exclude=build_dir --exclude=bin
@@ -347,9 +346,16 @@ jobs:
         tag: ${{ env.TAG }}_Personal_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版] 固件
+          **This is OpenWrt Firmware for ${{ env.FILE_NAME }}**
+          ### 📒 固件信息
           - 🔴【个人双开版方便不用改ip】
-          - 🔴默认IP：192.168.8.5 默认密码：无密码
+          - 💻 平台架构: ${{ env.FILE_NAME }}
+          - ⚽ 固件源码: ${{ env.REPO_URL }}
+          - 💝 源码分支: ${{ env.REPO_BRANCH }}
+          - 🚀 内核版本: ${{ env.KERNEL }}
+          - 🌐 默认地址：192.168.8.5
+          - 🔑 默认密码：无密码
+          ### 🧊 固件版本
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
           - 🎈🎈🎈 更新信息 🎈🎈🎈
@@ -376,7 +382,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -394,7 +400,7 @@ jobs:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
         title: "[个人双开版]${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
         content: |
-          ♨${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -418,20 +424,19 @@ jobs:
     - name: Check server configuration
       run: |
         echo "警告⚠"
-        echo "若分配的服务器性能不足，务必及时取消，重新运行！"
-        echo "已知编译成功CPU型号：8370C,8272CL"
-        echo "已知性能不足CPU型号：8171M"
-        echo -e "-------------- ------------CPU信息------------------------------------------\n"
+        echo "分配的服务器性能有限，若选择的插件过多，务必注意CPU性能！"
+        echo -e "已知CPU型号(降序): 7763，8370C，8272CL，8171M，E5-2673 \n"
+        echo -e "-------------- ------------CPU信息------------------------------------------"
         echo "CPU物理数量:$(cat /proc/cpuinfo| grep "physical id"| sort| uniq| wc -l)"
+        echo "CPU线程数量: $(nproc)"
         echo -e "CPU核心及版本信息：$(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
         echo "-------------------------------内存信息-------------------------------------------"
         echo "已安装内存详细信息："
-        sudo lshw -short -C memory | grep GiB
-        echo -e "\n"
+        echo -e "$(sudo lshw -short -C memory | grep GiB) \n"
         echo "-----------------------------硬盘信息---------------------------------------------"
-        echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l) \n"
+        echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l)"
         echo "硬盘详情："
-        echo " 系统空间       类型   总数  已用  可用  使用率"
+        echo "系统空间        类型   总数  已用  可用  使用率"
         df -Th
 
     - name: Initialization environment
@@ -536,7 +541,7 @@ jobs:
     - name: Output compilation information
       run: |
         cd openwrt
-        echo " 系统空间       类型  总数  已用  可用  使用率"
+        echo "系统空间        类型  总数  已用  可用  使用率"
         df -hT $PWD
         echo
         echo "=========================================="
@@ -587,7 +592,7 @@ jobs:
         echo "=========================================="
         echo "----------------空间使用-------------------"
         echo "=========================================="
-        echo " 系统空间      类型   总数  已用  可用 使用率"
+        echo "系统空间       类型   总数  已用  可用 使用率"
         df -hT
         echo "=========================================="
         du -h --max-depth=1 openwrt/ --exclude=build_dir --exclude=bin
@@ -649,9 +654,16 @@ jobs:
         tag: ${{ env.TAG }}_Personal_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版] 固件
+          **This is OpenWrt Firmware for ${{ env.FILE_NAME }}**
+          ### 📒 固件信息
           - 🔴【个人双开版方便不用改ip】
-          - 🔴默认IP：192.168.8.5 默认密码：无密码
+          - 💻 平台架构: ${{ env.FILE_NAME }}
+          - ⚽ 固件源码: ${{ env.REPO_URL }}
+          - 💝 源码分支: ${{ env.REPO_BRANCH }}
+          - 🚀 内核版本: ${{ env.KERNEL }}
+          - 🌐 默认地址：192.168.8.5
+          - 🔑 默认密码：无密码
+          ### 🧊 固件版本
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
           - 🎈🎈🎈 更新信息 🎈🎈🎈
@@ -678,7 +690,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -696,7 +708,7 @@ jobs:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
         title: "[个人双开版]${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
         content: |
-          ♨${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -720,20 +732,19 @@ jobs:
     - name: Check server configuration
       run: |
         echo "警告⚠"
-        echo "若分配的服务器性能不足，务必及时取消，重新运行！"
-        echo "已知编译成功CPU型号：8370C,8272CL"
-        echo "已知性能不足CPU型号：8171M"
-        echo -e "-------------- ------------CPU信息------------------------------------------\n"
+        echo "分配的服务器性能有限，若选择的插件过多，务必注意CPU性能！"
+        echo -e "已知CPU型号(降序): 7763，8370C，8272CL，8171M，E5-2673 \n"
+        echo -e "-------------- ------------CPU信息------------------------------------------"
         echo "CPU物理数量:$(cat /proc/cpuinfo| grep "physical id"| sort| uniq| wc -l)"
+        echo "CPU线程数量: $(nproc)"
         echo -e "CPU核心及版本信息：$(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
         echo "-------------------------------内存信息-------------------------------------------"
         echo "已安装内存详细信息："
-        sudo lshw -short -C memory | grep GiB
-        echo -e "\n"
+        echo -e "$(sudo lshw -short -C memory | grep GiB) \n"
         echo "-----------------------------硬盘信息---------------------------------------------"
-        echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l) \n"
+        echo -e  "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l)"
         echo "硬盘详情："
-        echo " 系统空间       类型   总数  已用  可用  使用率"
+        echo "系统空间        类型   总数  已用  可用  使用率"
         df -Th
 
     - name: Initialization environment
@@ -838,7 +849,7 @@ jobs:
     - name: Output compilation information
       run: |
         cd openwrt
-        echo " 系统空间       类型  总数  已用  可用  使用率"
+        echo "系统空间        类型  总数  已用  可用  使用率"
         df -hT $PWD
         echo
         echo "=========================================="
@@ -889,7 +900,7 @@ jobs:
         echo "=========================================="
         echo "----------------空间使用-------------------"
         echo "=========================================="
-        echo " 系统空间      类型   总数  已用  可用 使用率"
+        echo "系统空间       类型   总数  已用  可用 使用率"
         df -hT
         echo "=========================================="
         du -h --max-depth=1 openwrt/ --exclude=build_dir --exclude=bin
@@ -951,9 +962,16 @@ jobs:
         tag: ${{ env.TAG }}_Personal_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版] 固件
+          **This is OpenWrt Firmware for ${{ env.FILE_NAME }}**
+          ### 📒 固件信息
           - 🔴【个人双开版方便不用改ip】
-          - 🔴默认IP：192.168.8.5 默认密码：无密码
+          - 💻 平台架构: ${{ env.FILE_NAME }}
+          - ⚽ 固件源码: ${{ env.REPO_URL }}
+          - 💝 源码分支: ${{ env.REPO_BRANCH }}
+          - 🚀 内核版本: ${{ env.KERNEL }}
+          - 🌐 默认地址：192.168.8.5
+          - 🔑 默认密码：无密码
+          ### 🧊 固件版本
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
           - 🎈🎈🎈 更新信息 🎈🎈🎈
@@ -980,7 +998,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          ♨️ 🐳${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
@@ -998,7 +1016,7 @@ jobs:
         token: ${{ secrets.PUSH_PLUS_TOKEN }}
         title: "[个人双开版]${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成"
         content: |
-          ♨️ 🐳${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
+          ♨️ ${{ env.FILE_NAME }}_${{ env.KERNEL }}[个人双开版]编译完成
           开始时间：${{ env.DATE }}
           完成时间：${{ env.END }}
           编译耗时：${{ env.time }}
