--- a/.github/workflows/Build-lede-toolchain.yml
+++ b/.github/workflows/Build-lede-toolchain.yml
@@ -81,7 +81,7 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         (sudo -E apt-get -y update
-        sudo -E apt-get -y install clang rename $(curl -sL is.gd/depends_ubuntu_2204)
+        sudo -E apt-get -y install $(cat $GITHUB_WORKSPACE/depends-ubuntu-2204)
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get -y clean) &
         sudo timedatectl set-timezone "$TZ"
