--- a/.github/workflows/openwrt-config.yml
+++ b/.github/workflows/openwrt-config.yml
@@ -73,7 +73,7 @@ jobs:
         sudo -E rm -f /swapfile
         sudo -E rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android
         sudo -E apt-get update
-        sudo -E apt-get -y install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
+        sudo -E apt-get -y install $(cat $GITHUB_WORKSPACE/depends-ubuntu-2204)
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
         sudo timedatectl set-timezone "$TZ"
