--- a/.github/workflows/Build_X86_64-OpenWrt.yml
+++ b/.github/workflows/Build_X86_64-OpenWrt.yml
@@ -384,6 +384,7 @@ jobs:
       run: |
         cd openwrt 
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | sed -n 's/.*-\([0-9]\+\.[0-9]\+\.[0-9]\+\)_uefi\.img\.gz.*/\1/p')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
         
     - name: Organize files
@@ -694,6 +695,7 @@ jobs:
       run: |
         cd openwrt 
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | sed -n 's/.*-\([0-9]\+\.[0-9]\+\.[0-9]\+\)_uefi\.img\.gz.*/\1/p')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
         
     - name: Organize files
@@ -1004,6 +1006,7 @@ jobs:
       run: |
         cd openwrt 
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | sed -n 's/.*-\([0-9]\+\.[0-9]\+\.[0-9]\+\)_uefi\.img\.gz.*/\1/p')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
         
     - name: Organize files
@@ -1310,6 +1313,7 @@ jobs:
       run: |
         cd openwrt 
         bash  rename.sh
+        Kernel=$(ls bin/targets/x86/64 | grep "_uefi.img.gz" | sed -n 's/.*-\([0-9]\+\.[0-9]\+\.[0-9]\+\)_uefi\.img\.gz.*/\1/p')
         echo "KERNEL=$Kernel" >> $GITHUB_ENV
         
     - name: Organize files
